[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Weapons/Player/Orbs/Slime/Slime.png" type="Texture" id=1]
[ext_resource path="res://Assets/Weapons/Player/Orbs/Teleport/Teleport.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/OrbFeed.gd" type="Script" id=3]
[ext_resource path="res://Assets/Weapons/Player/Orbs/Ricochet/Ricochet.png" type="Texture" id=4]
[ext_resource path="res://Shaders/WhiteOutline.tres" type="Material" id=5]
[ext_resource path="res://Assets/UI/OrbFeed2.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Buddy.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Wires.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/BuddyIdleSheet.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "blink",
"speed": 25.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="FeedTexture" type="TextureRect"]
margin_top = -2.0
margin_right = 73.0
margin_bottom = 27.0
texture = ExtResource( 6 )
stretch_mode = 3
script = ExtResource( 3 )

[node name="TELEPORT" type="Sprite" parent="."]
visible = false
position = Vector2( 24, 24 )
texture = ExtResource( 2 )

[node name="RICOCHET" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 24 )
texture = ExtResource( 4 )

[node name="SLIME" type="Sprite" parent="."]
visible = false
position = Vector2( 40, 24 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 76.0
margin_bottom = 18.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.78 )
material = ExtResource( 5 )
margin_right = 16.0
margin_bottom = 18.0
texture = ExtResource( 2 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HBoxContainer/Current"]

[node name="Slot1" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.78 )
material = ExtResource( 5 )
margin_left = 16.0
margin_right = 32.0
margin_bottom = 18.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Tween" type="Tween" parent="HBoxContainer/Slot1"]

[node name="Slot2" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.78 )
material = ExtResource( 5 )
margin_left = 32.0
margin_right = 48.0
margin_bottom = 18.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Tween" type="Tween" parent="HBoxContainer/Slot2"]

[node name="Slot3" type="TextureRect" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.78 )
material = ExtResource( 5 )
margin_left = 48.0
margin_right = 64.0
margin_bottom = 18.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Tween" type="Tween" parent="HBoxContainer/Slot3"]

[node name="Buddy" type="AnimatedSprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 68.7356, 8.41066 )
rotation = 0.109956
scale = Vector2( 0.556082, 0.556082 )
z_index = -1
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Wires" type="Sprite" parent="Buddy"]
position = Vector2( -7.71964, 7.28634 )
rotation = -2.53596
scale = Vector2( 0.647703, 0.514578 )
z_index = -1
texture = ExtResource( 8 )
